--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
-dnl $Id: configure.in,v 1.40 1999/02/10 02:04:25 bennett Exp $
+dnl
+dnl $Id: configure.in,v 1.41 1999/02/10 22:23:05 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -103,6 +104,10 @@ AC_ARG_WITH(motif,
 [		with_motif=yes])
 
 dnl
+dnl If you ask not to have Xbae then you can't have Motif either.
+dnl
+test "$with_Xbae" = "no" && with_motif="no"
+dnl
 dnl Checks for Motif
 dnl These should not happen if --without-motif has been used.
 dnl
@@ -163,7 +168,7 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)
-AC_CHECK_HEADERS(locale.h)
+AC_CHECK_HEADERS(locale.h time.h)
 AC_CHECK_HEADERS(xbase.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
