--- a/Makefile.am
+++ b/Makefile.am
@@ -3,12 +3,12 @@
 #
 # Process this file with automake to produce Makefile.in
 #
-# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.20 1999/02/23 21:24:34 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.21 1999/03/04 10:02:23 danny Exp $
 #
 AUTOMAKE_OPTIONS = gnu 1.4 readme-alpha
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = doc lib intl src m4 po Xresources
+SUBDIRS = doc lib intl src m4 po Xresources examples
 
 # Remove this file here (it is created via configure), not from within intl.
 DISTCLEANFILES = intl/libintl.h
