--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.43 1999/03/04 10:02:26 danny Exp $
+dnl $Id: configure.in,v 1.44 1999/03/04 22:54:03 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.6.14])
+AM_INIT_AUTOMAKE([oleo], [1.6.15])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -126,6 +126,7 @@ if test "$with_motif" = "yes"; then
     CFLAGS="$MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
     LIBS="$MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 $X_EXTRA_LIBS $LIBS"
   fi
+  AC_CHECK_LIB(Xpm, main)
 fi
 
 dnl
