--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.44 1999/03/04 22:54:03 danny Exp $
+dnl $Id: configure.in,v 1.45 1999/03/06 13:44:23 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -187,8 +187,7 @@ AC_TYPE_SIGNAL
 AC_FUNC_STRFTIME
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(ftime gethostname gettimeofday mktime select strdup strstr)
-AC_CHECK_FUNCS(putenv)
-AC_CHECK_FUNCS(strerror)
+AC_CHECK_FUNCS(putenv strcasecmp strerror)
 AM_FUNC_MKTIME
 AM_FUNC_OBSTACK
 
