--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.45 1999/03/06 13:44:23 danny Exp $
+dnl $Id: configure.in,v 1.46 1999/03/10 23:10:43 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.6.15])
+AM_INIT_AUTOMAKE([oleo], [1.6.16])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -227,4 +227,4 @@ AC_SUBST(link_xmhtml)
 AC_SUBST(include_sciplot)
 AC_SUBST(link_sciplot)
 
-AC_OUTPUT([Makefile oleobug doc/Makefile lib/Makefile src/Makefile intl/Makefile m4/Makefile po/Makefile.in Xresources/Makefile examples/Makefile],[sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
+AC_OUTPUT([Makefile oleobug doc/Makefile lib/Makefile src/Makefile intl/Makefile m4/Makefile po/Makefile.in Xresources/Makefile examples/Makefile oleo.spec],[sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
