--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.1 1999/03/04 10:01:03 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.2 1999/03/10 23:10:48 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
-EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo
+EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo
