CSV stuff, see changelog

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Process this file with automake to produce Makefile.in
 #
-# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.22 1999/03/10 23:10:42 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.23 1999/03/11 23:05:56 danny Exp $
 #
 AUTOMAKE_OPTIONS = gnu 1.4 readme-alpha
 ACLOCAL_AMFLAGS = -I m4
@@ -18,5 +18,5 @@ EXTRA_DIST = oleobug.in FAQ oleo.spec.in oleo.spec
 release:
 	$(MAKE) dist distdir=$(PACKAGE)`date +"%y%m%d"`
 
-docdir=        $(exec_prefix)/Oleo
+docdir=        $(prefix)/Oleo
 doc_DATA=	AUTHORS FAQ
