--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,7 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.2 1999/03/10 23:10:48 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.3 1999/03/11 23:06:02 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
-EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo
+EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
+	q110399.csv
