Corrections to paths

--- a/ftp.dist
+++ b/ftp.dist
@@ -1,5 +1,6 @@
 cd /home/www/html/software/oleo
 ren oleo.html oleo.html.Old
 put doc/oleo_web.html oleo.html
-cd /home
+cd /home/ftp/gnu/oleo
+put oleo-version.tar.gz
 quit
