--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.48 1999/03/16 22:57:19 danny Exp $
+dnl $Id: configure.in,v 1.49 1999/03/17 21:21:32 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -32,6 +32,7 @@ dnl
 dnl Find a C compiler before even detecting systems
 dnl
 AC_PROG_CC
+AC_PROG_CXX
 
 dnl
 dnl Detect strange environments
@@ -166,14 +167,24 @@ if test $with_debug = yes; then
   fi
 fi
            
+dnl
 dnl Checks for header files.
+dnl
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)
 AC_CHECK_HEADERS(locale.h time.h)
-AC_CHECK_HEADERS(xbase.h)
 
+dnl
+dnl Do we have xbase library ?
+dnl
+echo Yow $CFLAGS Yow $LIBS Yow
+AC_CHECK_LIB(xbase, main)
+AM_CONDITIONAL(HaveXbase, test x$ac_cv_lib_xbase_main = xyes)
+
+dnl
 dnl Checks for typedefs, structures, and compiler characteristics.
+dnl
 AC_C_CONST
 AC_C_INLINE
 AC_TYPE_SIZE_T
@@ -181,7 +192,9 @@ AC_HEADER_TIME
 AC_STRUCT_TM
 AC_STRUCT_TIMEZONE
 
+dnl
 dnl Checks for library functions.
+dnl
 AC_FUNC_ALLOCA
 AC_TYPE_SIGNAL
 AC_FUNC_STRFTIME
@@ -191,30 +204,16 @@ AC_CHECK_FUNCS(putenv strcasecmp strerror)
 AM_FUNC_MKTIME
 AM_FUNC_OBSTACK
 
+dnl
 dnl See if we're GNU Gettext friendly
+dnl
 AM_GNU_GETTEXT
 
 dnl
 dnl This used to cause all kinds of problems in an earlier revision
-dnl	of oleo.
+dnl	of oleo. (Mostly because of using earlier auto* tools.)
 dnl
 AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)
-
-dnl
-dnl Xbase
-dnl
-dnl AC_ARG_WITH(xbase,
-dnl [  --without-xbase		  Do not use Xbase, even if detected],
-dnl [		case "${withval}" in
-dnl 		  y | ye | yes )	usexbase=yes ;;
-dnl 		  n | no )		usexbase=no ;;
-dnl 		  * )			usexbase=yes ;;
-dnl 		esac],
-dnl [		usexbase=yes])
-dnl 
-dnl if test $usexbase = yes; then
-dnl 	AC_DEFINE(USE_XBASE)
-dnl fi
 
 AC_SUBST(LIBOBJS)
 
