--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,8 +1,9 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.7 1999/02/10 02:00:01 bennett Exp $
+# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.8 1999/03/30 22:17:06 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
 EXTRA_DIST = gettext.m4 lcmessage.m4 progtest.m4 \
 		x11.m4 \
-		motif.m4 sciplot.m4 xmhtml.m4 xbae.m4 xlt.m4
+		motif.m4 sciplot.m4 xmhtml.m4 xbae.m4 xlt.m4 \
+		cxx.m4
