--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.4 1999/03/21 16:19:24 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.5 1999/04/09 11:46:41 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
 EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
-	q110399.csv loop.oleo
+	q110399.csv loop.oleo formula.sylk paine.slk
