--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.56 1999/04/09 11:46:33 danny Exp $
+dnl $Id: configure.in,v 1.57 1999/04/12 13:50:19 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.99.2])
+AM_INIT_AUTOMAKE([oleo], [1.99.3])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -217,6 +217,11 @@ if test "$CXX" != "no"; then
 else
   AM_CONDITIONAL(HaveXbase, false)
 fi
+
+dnl
+dnl GNU GSL (GNU Scientific Library)
+dnl
+AC_CHECK_LIB(gsl, gsl_error)
 
 dnl
 dnl Checks for typedefs, structures, and compiler characteristics.
