--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.57 1999/04/12 13:50:19 danny Exp $
+dnl $Id: configure.in,v 1.58 1999/04/27 18:28:10 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -57,7 +57,8 @@ dnl
 dnl Dirty trick
 dnl
 if test -d /usr/local ; then
-	CFLAGS="-I/usr/local/include $CFLAGS "
+dnl	CFLAGS="-I/usr/local/include $CFLAGS "
+	INCLUDES="-I/usr/local/include $INCLUDES "
 	LIBS="-L/usr/local/lib $LIBS "
 fi
 
@@ -73,6 +74,18 @@ AC_CHECK_LIB(ncurses, waddch, ,
 	AC_CHECK_LIB(curses, addch, ,
 		AC_CHECK_LIB(termlib, tgetent, ,
 			AC_CHECK_LIB(termcap, tgetent))))
+
+dnl Check for sys_errlist[] and sys_nerr, check for declaration
+AC_MSG_CHECKING([for sys_errlist and sys_nerr])
+AC_CACHE_VAL(oleo_cv_sys_errlist,
+[AC_TRY_LINK([#include <errno.h>
+#include <stdio.h>],
+[  char *msg = sys_errlist[sys_nerr - 1];],
+      oleo_cv_sys_errlist=yes, oleo_cv_sys_errlist=no)])dnl
+      AC_MSG_RESULT($oleo_cv_sys_errlist)
+      if test $oleo_cv_sys_errlist = yes; then
+      AC_DEFINE(HAVE_SYS_ERRLIST)
+      fi
 
 dnl
 dnl This library is required on FreeBSD.
@@ -92,63 +105,67 @@ dnl Checks for X11
 dnl
 AC_PATH_XTRA
 
-dnl
-dnl Add link to X11
-dnl	This is only for the non-motif case.
-dnl
-AC_LINK_X
+dnl There are cases where motif may be installed on a system, but X may not
+dnl be (Default on hppa1.1-hp-hpux10.20) therefor this this must all be wrapped
+if test "$no_x" = ""; then 
+ dnl
+ dnl Add link to X11
+ dnl	This is only for the non-motif case.
+ dnl
+ AC_LINK_X
 
-dnl
-dnl Motif (LessTif)
-dnl
-AC_ARG_WITH(motif,
-[  --without-motif		  Do not use Motif, even if detected],
-[		case "${withval}" in
-		  y | ye | yes )	usemotif=yes ;;
-		  n | no )		usemotif=no ;;
-		  * )			usemotif=yes ;;
-		esac],
-[		with_motif=yes])
-
-dnl
-dnl If you ask not to have Xbae then you can't have Motif either.
-dnl And the other way around.
-dnl
-dnl To make sure people know about this, we'll be harsh and abort.
-dnl
-if test "$with_Xbae" = "no" -a "$with_motif" = "yes" ; then
-	AC_MSG_ERROR(Cannot build Motif/LessTif interface without Xbae)
-fi
-if test "$with_Xbae" = "yes" -a "$with_motif" = "no" ; then
-	AC_MSG_ERROR(Cannot use Xbae without Motif/LessTif)
-fi
-
-dnl
-dnl Just in case I misunderstood something - make sure nothing slips through.
-dnl
-test "$with_Xbae" = "no" && with_motif="no"
-test "$with_motif" = "no" && with_Xbae="no"
-
-dnl
-dnl Checks for Motif
-dnl These should not happen if --without-motif has been used.
-dnl
-if test "$with_motif" = "yes"; then
-  AC_FIND_MOTIF
-  ICE_FIND_Xbae
-  ICE_FIND_XmHTML
-  AC_FIND_XLT
-  if test "$have_xlt" = "yes"; then
-    CFLAGS="$XLT_CFLAGS $MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
-    LIBS="$XLT_LIBS $MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 -lXext $X_EXTRA_LIBS $LIBS"
-    AC_DEFINE(HAVE_SciPlot_H)
-  else
-    ICE_FIND_SciPlot
-    CFLAGS="$MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
-    LIBS="$MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 $X_EXTRA_LIBS $LIBS"
-  fi
-  AC_CHECK_LIB(Xpm, main)
-fi
+ dnl
+ dnl Motif (LessTif)
+ dnl
+ AC_ARG_WITH(motif,
+ [  --without-motif		  Do not use Motif, even if detected],
+ [		case "${withval}" in
+ 		  y | ye | yes )	usemotif=yes ;;
+ 		  n | no )		usemotif=no ;;
+ 		  * )			usemotif=yes ;;
+ 		esac],
+ [		with_motif=yes])
+ 
+ dnl
+ dnl If you ask not to have Xbae then you can't have Motif either.
+ dnl And the other way around.
+ dnl
+ dnl To make sure people know about this, we'll be harsh and abort.
+ dnl
+ if test "$with_Xbae" = "no" -a "$with_motif" = "yes" ; then
+ 	AC_MSG_ERROR(Cannot build Motif/LessTif interface without Xbae)
+ fi
+ if test "$with_Xbae" = "yes" -a "$with_motif" = "no" ; then
+ 	AC_MSG_ERROR(Cannot use Xbae without Motif/LessTif)
+ fi
+ 
+ dnl
+ dnl Just in case I misunderstood something - make sure nothing slips through.
+ dnl
+ test "$with_Xbae" = "no" && with_motif="no"
+ test "$with_motif" = "no" && with_Xbae="no"
+ 
+ dnl
+ dnl Checks for Motif
+ dnl These should not happen if --without-motif has been used.
+ dnl
+ if test "$with_motif" = "yes"; then
+   AC_FIND_MOTIF
+   ICE_FIND_Xbae
+   ICE_FIND_XmHTML
+   AC_FIND_XLT
+   if test "$have_xlt" = "yes"; then
+     CFLAGS="$XLT_CFLAGS $MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
+     LIBS="$XLT_LIBS $MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 -lXext $X_EXTRA_LIBS $LIBS"
+     AC_DEFINE(HAVE_SciPlot_H)
+   else
+     ICE_FIND_SciPlot
+     CFLAGS="$MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
+     LIBS="$MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 $X_EXTRA_LIBS $LIBS"
+   fi
+   AC_CHECK_LIB(Xpm, main)
+ fi
+fi dnl "$no_x" = "yes"
 
 dnl
 dnl This is an automake variable which allows you to use conditionals
