--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,19 +1,18 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/lib/Makefile.am,v 1.9 1999/01/27 23:23:42 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/lib/Makefile.am,v 1.10 1999/04/27 18:28:12 danny Exp $
 #
 # Process this file with automake to produce Makefile.in
 #
 noinst_LIBRARIES = liboleo.a
 
-#liboleo_a_SOURCES = getdate.y getopt.c getopt1.c xmalloc.c error.c \
-#	random.c
-#noinst_HEADERS = getopt.h error.h get_date.h obstack.h mktime.c obstack.c 
-
+#
+# The list of files here is incomplete :
+#	configure.in can add mktime.c and obstack.c through the LIBOBJS
+#	mechanism
+#
 liboleo_a_SOURCES = getdate.y getopt.c getopt1.c random.c
-
-noinst_HEADERS = getopt.h get_date.h obstack.h mktime.c obstack.c 
-
-INCLUDES = -I.. -I$(srcdir) -I../intl
-
 liboleo_a_LIBADD = @LIBOBJS@
 
+noinst_HEADERS = getopt.h get_date.h obstack.h
+
+INCLUDES = -I.. -I$(srcdir) -I../intl
