--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.59 1999/04/29 22:30:04 danny Exp $
+dnl $Id: configure.in,v 1.60 1999/06/04 08:01:40 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.99.3])
+AM_INIT_AUTOMAKE([oleo], [1.99.4])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -93,6 +93,11 @@ dnl
 dnl This library is required on FreeBSD.
 dnl
 AC_CHECK_LIB(mytinfo, tputs)
+
+dnl
+dnl Good i18n on FreeBSD requires the XPG4 library
+dnl
+AC_CHECK_LIB(xpg4, setlocale)
 
 dnl
 dnl Check existence of a working math library
