--- a/ftp.dist
+++ b/ftp.dist
@@ -2,5 +2,6 @@ cd /home/www/html/software/oleo
 ren oleo.html oleo.html.Old
 put doc/oleo_web.html oleo.html
 cd /home/ftp/gnu/oleo
+bin
 put oleo-version.tar.gz
 quit
