--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.63 1999/07/22 22:13:28 danny Exp $
+dnl $Id: configure.in,v 1.64 1999/07/23 16:23:41 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -274,6 +274,12 @@ AC_CHECK_FUNCS(ftime gethostname gettimeofday mktime select strdup strstr)
 AC_CHECK_FUNCS(putenv strcasecmp strerror)
 AM_FUNC_MKTIME
 AM_FUNC_OBSTACK
+
+dnl
+dnl CUPS is the Common UNIX Printing System
+dnl	http://www.cups.org
+dnl
+AC_CHECK_LIB(cups, cupsGetPrinters)
 
 dnl
 dnl See if we're GNU Gettext friendly
