--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.64 1999/07/23 16:23:41 danny Exp $
+dnl $Id: configure.in,v 1.65 1999/08/28 09:47:11 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -158,7 +158,7 @@ if test "$no_x" = ""; then
  dnl
  if test "$with_motif" = "yes"; then
    AC_FIND_MOTIF
-   ICE_FIND_Xbae
+   AC_FIND_XBAE
    ICE_FIND_XmHTML
    AC_FIND_XLT
    if test "$have_xlt" = "yes"; then
@@ -224,6 +224,10 @@ AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)
 AC_CHECK_HEADERS(locale.h time.h)
+
+dnl
+dnl
+AC_CHECK_FUNC(XltCreateFontChooser, AC_DEFINE(HAVE_XLT_FONTCHOOSER))
 
 dnl
 dnl Xbase support (to read DBF files).
