--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,9 +1,8 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.8 1999/03/30 22:17:06 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.9 1999/08/28 09:47:20 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
 EXTRA_DIST = gettext.m4 lcmessage.m4 progtest.m4 \
 		x11.m4 \
-		motif.m4 sciplot.m4 xmhtml.m4 xbae.m4 xlt.m4 \
-		cxx.m4
+		motif.m4 sciplot.m4 xmhtml.m4 cxx.m4
