--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.65 1999/08/28 09:47:11 danny Exp $
+dnl $Id: configure.in,v 1.66 1999/08/30 01:39:12 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -161,7 +161,7 @@ if test "$no_x" = ""; then
    AC_FIND_XBAE
    ICE_FIND_XmHTML
    AC_FIND_XLT
-   if test "$have_xlt" = "yes"; then
+   if test "x$XLT_LIBS" != "x"; then
      CFLAGS="$XLT_CFLAGS $MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
      LIBS="$XLT_LIBS $MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 -lXext $X_EXTRA_LIBS $LIBS"
      AC_DEFINE(HAVE_SciPlot_H)
