--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,8 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.5 1999/04/09 11:46:41 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.6 1999/11/10 00:22:50 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
 EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
-	q110399.csv loop.oleo formula.sylk paine.slk
+	q110399.csv loop.oleo formula.sylk paine.slk \
+	create_koers.txt data.sql mysql.oleo
